General: Fix hover feedback with white/no-bg buttons...

--- a/assets/less/new/components/buttons.less
+++ b/assets/less/new/components/buttons.less
@@ -240,4 +240,8 @@ button:hover::after {
           linear-gradient(to right, var(--color-blue-50), var(--color-purple-50)) border-box;
   border-color: transparent;
   transition: all 250ms;
+  color: black;
+  &::after {
+    opacity: 0.75;
+  }
 }
