Home: Add background-image sets for webp and avif hero images.

--- a/assets/less/new/components/buttons.less
+++ b/assets/less/new/components/buttons.less
@@ -226,6 +226,7 @@ button:hover::after {
   }
 }
 
+// TODO: This is for the fancy padding-box hover border effect thingy. I'll clean this up later
 .btn-no-bg {
   --btn-background-color: var(--color-white);
 }
