Home: Hero text, and style adjustments

--- a/assets/less/pages/home.less
+++ b/assets/less/pages/home.less
@@ -22,6 +22,21 @@
     isolation: isolate;
   }
 
+  .container.hero {
+    padding-block: 20vh 40vh;
+    gap: 20px;
+  }
+
+
+.hero-text {
+  font-size: 1.4rem;
+  font-weight: 400;
+  text-align: center;
+  line-height: 1.4;
+  max-inline-size: 42rem; //50.5rem;
+}
+
+
   // Override logo colours
   .logo {
     --accent: var(--color-blue-20);
