All: Additional styling.

--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -1,5 +1,10 @@
 // 2024 Redesign Style
 
+// Top level controls
+
+// Show the site announcement banner
+@show-site-announcement: true;
+
 // Bases
 @import "./new-style.less";
 @import "./new/animations.less";
@@ -15,6 +20,7 @@
 @import "./new/components/site-nav.less";
 @import "./new/components/testimonial.less";
 @import "./new/components/pre-footer.less";
+@import "./new/components/announcement.less";
 
 // Page imports
 @import "./pages/donations.less";
