--- a/assets/less/pages/home.less
+++ b/assets/less/pages/home.less
@@ -23,17 +23,25 @@
   }
 
   .container.hero {
-    padding-block: 20vh 40vh;
+    padding-block: 25vh 40vh;
     gap: 20px;
+  }
+
+  .tagline {
+    font-weight: 800;
+    margin-bottom: 0;
   }
 
 
 .hero-text {
   font-size: 1.4rem;
-  font-weight: 400;
+  font-weight: 500;
   text-align: center;
   line-height: 1.4;
-  max-inline-size: 42rem; //50.5rem;
+  max-inline-size: 50.5rem;
+  .sub-tag {
+    max-inline-size: 38rem;
+  }
 }
 
 
