--- a/sites/www.thunderbird.net/includes/announcement.html
+++ b/sites/www.thunderbird.net/includes/announcement.html
@@ -1,3 +1,3 @@
 <div class="site-announcement">
-  Thunderbird.net has a new look! <a class="strong" href="{{ url('thunderbird.blog') }}">Learn More.</a>
+  Thunderbird.net has a new look! <a class="strong" href="{{ url('blog') }}">Learn More.</a>
 </div>
