--- a/assets/less/new/components/announcement.less
+++ b/assets/less/new/components/announcement.less
@@ -18,6 +18,10 @@
   color: var(--color-white);
   font-size: 80%;
   font-weight: 500;
+
+  .strong::after {
+    background-color: var(--color-blue-50);
+  }
 }
 
 .site-announcement ~ .site-nav {
