General: Adjust strong link chevron colour to be blue and not ink.

--- a/assets/less/new/links.less
+++ b/assets/less/new/links.less
@@ -36,7 +36,7 @@ a {
       margin-left: 0.5rem;
 
       // Colour mask
-      background-color: var(--color-ink-50);
+      background-color: var(--color-blue-50);
       mask-image: var(--bg-img);
       mask-repeat: no-repeat;
       // Blah
