--- a/assets/less/pages/download.less
+++ b/assets/less/pages/download.less
@@ -175,6 +175,7 @@
       font-weight: 400;
       display: flex;
       flex-direction: row;
+      flex-wrap: wrap;
       list-style: none;
       padding: 0;
       gap: 1rem;
