--- a/media/css/appeals/spring24.css
+++ b/media/css/appeals/spring24.css
@@ -155,7 +155,7 @@ section {
   display: block;
 }
 
-@media (max-width: 720px) {
+@media (max-width: 920px) {
   #initAppeal {
     flex-direction: column-reverse;
     justify-items: center;
@@ -215,22 +215,45 @@ main {
   position: relative;
 }
 
-#illustration > #ill-body {
+#illustration > div {
   position: absolute;
+}
+#illustration > #ill-body {
   left: -128px;
   top: -245px;
 }
 #illustration > #ill-hearts {
-  position: absolute;
   left: 23px;
   top: -233px;
 }
 
-@media(max-width: 720px) {
+@media(max-width: 920px) {
   #illustration {
+    display: flex;
+    flex-direction: column-reverse;
+    text-align: center;
+
+    position: relative;
     width: 100%;
-    justify-content: center;
-    min-height: 300px;
+    height: 120px;
+  }
+  #illustration > div {
+    position: relative;
+    width: 100%;
+  }
+  #illustration > #ill-hearts > svg {
+    max-width: 150px;
+  }
+  #illustration > #ill-body > svg {
+    max-width: 300px;
+  }
+  #illustration > #ill-hearts {
+    left: 0;
+    top: 450px;
+  }
+  #illustration > #ill-body {
+    left: 0;
+    top: 175px;
   }
 }
 
