--- a/media/css/appeals/spring24.css
+++ b/media/css/appeals/spring24.css
@@ -4,6 +4,98 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
  */
 
+/* Open Sans */
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url("/media/fonts/opensans-regular.woff2") format("woff2"),
+    url("/media/fonts/opensans-regular.woff") format("woff");
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  font-style: italic;
+  font-weight: 400;
+  font-display: swap;
+  src: url("/media/fonts/opensans-italic.woff2") format("woff2"),
+    url("/media/fonts/opensans-italic.woff") format("woff");
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url("/media/fonts/opensans-light.woff2") format("woff2"),
+    url("/media/fonts/opensans-light.woff") format("woff");
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  font-style: italic;
+  font-weight: 300;
+  font-display: swap;
+  src: url("/media/fonts/opensans-lightitalic.woff2") format("woff2"),
+    url("/media/fonts/opensans-lightitalic.woff") format("woff");
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url("/media/fonts/opensans-semibold.woff2") format("woff2"),
+    url("/media/fonts/opensans-semibold.woff") format("woff");
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  font-style: italic;
+  font-weight: 600;
+  font-display: swap;
+  src: url("/media/fonts/opensans-semibolditalic.woff2") format("woff2"),
+    url("/media/fonts/opensans-semibolditalic.woff") format("woff");
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url("/media/fonts/opensans-bold.woff2") format("woff2"),
+    url("/media/fonts/opensans-bold.woff") format("woff");
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  font-style: italic;
+  font-weight: 700;
+  font-display: swap;
+  src: url("/media/fonts/opensans-bolditalic.woff2") format("woff2"),
+    url("/media/fonts/opensans-bolditalic.woff") format("woff");
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 800;
+  font-display: swap;
+  src: url("/media/fonts/opensans-extrabold.woff2") format("woff2"),
+    url("/media/fonts/opensans-extrabold.woff") format("woff");
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  font-style: italic;
+  font-weight: 800;
+  font-display: swap;
+  src: url("/media/fonts/opensans-extrabolditalic.woff2") format("woff2"),
+    url("/media/fonts/opensans-extrabolditalic.woff") format("woff");
+}
+
+/* Other */
 @font-face {
   font-family: system-ui;
   font-style: normal;
