General: Design review tweaks and plenty of clean up.

--- a/assets/less/new/sizing.less
+++ b/assets/less/new/sizing.less
@@ -11,3 +11,21 @@
   --font-4xl: 41px;
   --font-hero: 59px;
 }
+
+.section-text :where(h2) {
+  font-size: 2.75rem;
+  font-weight: 800;
+  margin-bottom: 0;
+}
+
+.section-text :where(h3) {
+  font-size: 2rem;
+  font-weight: 600;
+  margin-bottom: 0;
+}
+
+.section-text :where(h4) {
+  font-size: 1.25rem;
+  font-weight: 300;
+  margin: 0 0 1em;
+}
