--- a/assets/less/pages/home.less
+++ b/assets/less/pages/home.less
@@ -65,16 +65,6 @@
     --hamburger-foreground-active: var(--color-black);
   }
 
-  .section-text {
-    max-inline-size: 50%;
-  }
-
-
-  .section-heading {
-    font-size: 2.75rem;
-    font-weight: 800;
-    margin: 0;
-  }
 
   .testimonials {
     @media (max-width: @lg) {
@@ -133,6 +123,9 @@
 
 
   #free-your-inbox {
+    padding-top: 10px;
+    padding-bottom: 30px;
+
     .cta {
       --btn-bg: color-mix(in srgb, var(--bg) 90%, transparent);
       display: grid;
