--- a/assets/less/pages/who-we-are.less
+++ b/assets/less/pages/who-we-are.less
@@ -1,4 +1,10 @@
 .page-who-we-are {
+  #meet-thunderbird {
+    .section-text {
+      margin-bottom: 0;
+    }
+  }
+
   .icon-grid-container {
     width: 100%;
     display: flex;
