Pre-footer: Bump up font-weight for subscribe

--- a/assets/less/new/components/pre-footer.less
+++ b/assets/less/new/components/pre-footer.less
@@ -44,6 +44,10 @@
     overflow: hidden;
   }
 
+  .btn-newsletter-text {
+    font-weight: 600;
+  }
+
   .newsletter-form input {
     background: none;
     border: none;
