Footer: Change Participation to Participate

--- a/sites/www.thunderbird.net/includes/base/footer.html
+++ b/sites/www.thunderbird.net/includes/base/footer.html
@@ -40,7 +40,7 @@
         <h4>{{ _('Contribute') }}</h4>
         <ul>
           <li><a href="{{ url('thunderbird.donate') }}" class="dotted">{{_('Donations')}}</a></li>
-          <li><a href="{{ url('thunderbird.participate') }}" class="dotted">{{_('Participation')}}</a></li>
+          <li><a href="{{ url('thunderbird.participate') }}" class="dotted">{{_('Participate')}}</a></li>
         </ul>
       </div>
     </div>
