Footer: Adjust download nav link to the all releases page

--- a/sites/www.thunderbird.net/includes/base/footer.html
+++ b/sites/www.thunderbird.net/includes/base/footer.html
@@ -24,7 +24,7 @@
           <li><a href="{{ url('blog') }}" class="dotted">{{_('Blog')}}</a></li>
           <li><a href="{{ url('support') }}" class="dotted">{{_('Get Help')}}</a></li>
           {# <li><a href="{{ url('blog') }}" class="dotted">{{_('Podcasts')}}</a></li> #}
-          <li><a href="{{ url('thunderbird.download') }}" class="dotted">{{_('Downloads')}}</a></li>
+          <li><a href="{{ url('thunderbird.latest.all') }}" class="dotted">{{_('Downloads')}}</a></li>
           <li><a href="{{ thunderbird_url('releasenotes', 'release') }}" class="dotted">{{_('Release Notes')}}</a></li>
         </ul>
       </div>
