--- a/media/css/appeal/spring24.css
+++ b/media/css/appeal/spring24.css
@@ -11,7 +11,7 @@
   font-weight: 400;
   font-display: swap;
   src: url("/media/fonts/opensans-regular.woff2") format("woff2"),
-    url("/media/fonts/opensans-regular.woff") format("woff");
+  url("/media/fonts/opensans-regular.woff") format("woff");
 }
 
 @font-face {
@@ -20,7 +20,7 @@
   font-weight: 400;
   font-display: swap;
   src: url("/media/fonts/opensans-italic.woff2") format("woff2"),
-    url("/media/fonts/opensans-italic.woff") format("woff");
+  url("/media/fonts/opensans-italic.woff") format("woff");
 }
 
 @font-face {
@@ -29,7 +29,7 @@
   font-weight: 300;
   font-display: swap;
   src: url("/media/fonts/opensans-light.woff2") format("woff2"),
-    url("/media/fonts/opensans-light.woff") format("woff");
+  url("/media/fonts/opensans-light.woff") format("woff");
 }
 
 @font-face {
@@ -38,7 +38,7 @@
   font-weight: 300;
   font-display: swap;
   src: url("/media/fonts/opensans-lightitalic.woff2") format("woff2"),
-    url("/media/fonts/opensans-lightitalic.woff") format("woff");
+  url("/media/fonts/opensans-lightitalic.woff") format("woff");
 }
 
 @font-face {
@@ -47,7 +47,7 @@
   font-weight: 600;
   font-display: swap;
   src: url("/media/fonts/opensans-semibold.woff2") format("woff2"),
-    url("/media/fonts/opensans-semibold.woff") format("woff");
+  url("/media/fonts/opensans-semibold.woff") format("woff");
 }
 
 @font-face {
@@ -56,7 +56,7 @@
   font-weight: 600;
   font-display: swap;
   src: url("/media/fonts/opensans-semibolditalic.woff2") format("woff2"),
-    url("/media/fonts/opensans-semibolditalic.woff") format("woff");
+  url("/media/fonts/opensans-semibolditalic.woff") format("woff");
 }
 
 @font-face {
@@ -65,7 +65,7 @@
   font-weight: 700;
   font-display: swap;
   src: url("/media/fonts/opensans-bold.woff2") format("woff2"),
-    url("/media/fonts/opensans-bold.woff") format("woff");
+  url("/media/fonts/opensans-bold.woff") format("woff");
 }
 
 @font-face {
@@ -74,7 +74,7 @@
   font-weight: 700;
   font-display: swap;
   src: url("/media/fonts/opensans-bolditalic.woff2") format("woff2"),
-    url("/media/fonts/opensans-bolditalic.woff") format("woff");
+  url("/media/fonts/opensans-bolditalic.woff") format("woff");
 }
 
 @font-face {
@@ -83,7 +83,7 @@
   font-weight: 800;
   font-display: swap;
   src: url("/media/fonts/opensans-extrabold.woff2") format("woff2"),
-    url("/media/fonts/opensans-extrabold.woff") format("woff");
+  url("/media/fonts/opensans-extrabold.woff") format("woff");
 }
 
 @font-face {
@@ -92,7 +92,7 @@
   font-weight: 800;
   font-display: swap;
   src: url("/media/fonts/opensans-extrabolditalic.woff2") format("woff2"),
-    url("/media/fonts/opensans-extrabolditalic.woff") format("woff");
+  url("/media/fonts/opensans-extrabolditalic.woff") format("woff");
 }
 
 /* Other */
@@ -189,12 +189,14 @@
   --accent-text: var(--color-appeal-txt);
 
 
-  --bg-img: url('/media/img/thunderbird/appeal/spring24/background.png');
+  --bg-img: url('/media/svg/appeal/spring24/clouds.svg');
+
   --bg-img-set: image-set(
-      url('/media/img/thunderbird/appeal/spring24/background.avif') type('image/avif'),
-      /*url('/media/img/thunderbird/appeal/spring24/background.webp') type('image/webp'),*/
-      var(--bg-img) type('image/png')
+    url('/media/img/thunderbird/appeal/spring24/background.avif') type('image/avif'),
+      /*url('/media/img/thunderbird/appeal/spring24/background.webp') type('image/webp'),*/ var(--bg-img) type('image/png')
   );
+
+  --bg-img: radial-gradient(600.22% 100% at 50% 0%, #FCF8D8 2.5%, #F7E4FE 22.17%, #74BFF4 100%);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -209,6 +211,37 @@
   */
 }
 
+.clouds-bg {
+  --clouds-bg: url('/media/svg/appeal/spring24/clouds.svg');
+  --clouds-size: auto 1300px;
+  --clouds-position: -550px -500px;
+  position: absolute;
+  top: 0;
+  display: flex;
+  width: 100%;
+  height: 1300px;
+  justify-content: center;
+  z-index: -1;
+}
+
+.clouds-bg .left {
+  background: var(--clouds-bg);
+  background-repeat: no-repeat;
+  background-position: var(--clouds-position);
+  background-size: var(--clouds-size);
+  width: 100%;
+}
+
+.clouds-bg .right {
+
+  background: var(--clouds-bg);
+  background-repeat: no-repeat;
+  background-position: var(--clouds-position);
+  background-size: var(--clouds-size);
+  width: 100%;
+  transform: scaleX(-100%);
+}
+
 html {
   font-family: system-ui, Open Sans, sans-serif;
   font-size: 1rem;
@@ -217,12 +250,11 @@ html {
 body {
   background-color: var(--bg);
   background-image: var(--bg-img);
-  background-image: var(--bg-img-set);
+  /*background-image: var(--bg-img-set);*/
   background-position: top center;
   background-size: auto 1800px; /*500px;*/
   background-repeat: no-repeat; /*repeat-x;*/
   color: var(--txt);
-  position: relative;
   margin: 8rem 0 0;
   padding: 0;
   min-height: 100vh;
@@ -294,6 +326,7 @@ main {
   font-weight: 700;
   margin: 0;
 }
+
 #appeal-heading span {
   width: 100%;
   font-size: 3.7rem;
@@ -306,6 +339,7 @@ main {
   #appeal-heading {
     font-size: 3.7rem !important;
   }
+
   #appeal-heading span {
     font-size: 2rem;
   }
@@ -319,16 +353,18 @@ main {
 #illustration > div {
   position: absolute;
 }
+
 #illustration > #ill-body {
   left: -128px;
   top: -245px;
 }
+
 #illustration > #ill-hearts {
   left: 23px;
   top: -233px;
 }
 
-@media(max-width: 920px) {
+@media (max-width: 920px) {
   #illustration {
     display: flex;
     flex-direction: column-reverse;
@@ -338,20 +374,25 @@ main {
     width: 100%;
     height: 120px;
   }
+
   #illustration > div {
     position: relative;
     width: 100%;
   }
+
   #illustration > #ill-hearts > svg {
     max-width: 150px;
   }
+
   #illustration > #ill-body > svg {
     max-width: 300px;
   }
+
   #illustration > #ill-hearts {
     left: 0;
     top: 450px;
   }
+
   #illustration > #ill-body {
     left: 0;
     top: 175px;
@@ -366,7 +407,7 @@ main {
   background-size: contain;
   background-repeat: no-repeat;
   border-radius: 3px;
-  box-shadow: 4px 4px 24px rgba(0,0,0,0.15);
+  box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.15);
   color: white;
   display: flex;
   flex-wrap: wrap;
@@ -675,6 +716,7 @@ main {
   .letter-container {
     padding: 1rem;
   }
+
   .letter-container:before {
     inset: 0;
   }
