--- a/media/css/appeal/spring24.css
+++ b/media/css/appeal/spring24.css
@@ -95,58 +95,58 @@
   url("/media/fonts/opensans-extrabolditalic.woff") format("woff");
 }
 
-/* Other */
+/* Nicer fallbacks */
 @font-face {
-  font-family: system-ui;
+  font-family: 'system-ui';
   font-style: normal;
   font-weight: 300;
   src: local(".SFNS-Light"), local(".SFNSText-Light"), local("Segoe UI Light"), local("Ubuntu Light");
 }
 
 @font-face {
-  font-family: system-ui;
+  font-family: 'system-ui';
   font-style: italic;
   font-weight: 300;
   src: local(".SFNS-LightItalic"), local(".SFNSText-LightItalic"), local("Segoe UI Light Italic"), local("Ubuntu Light Italic");
 }
 
 @font-face {
-  font-family: system-ui;
+  font-family: 'system-ui';
   font-style: normal;
   font-weight: 400;
   src: local(".SFNS-Regular"), local(".SFNSText-Regular"), local("Segoe UI"), local("Ubuntu");
 }
 
 @font-face {
-  font-family: system-ui;
+  font-family: 'system-ui';
   font-style: italic;
   font-weight: 400;
   src: local(".SFNS-Italic"), local(".SFNSText-Italic"), local("Segoe UI Italic"), local("Ubuntu Italic");
 }
 
 @font-face {
-  font-family: system-ui;
+  font-family: 'system-ui';
   font-style: normal;
   font-weight: 500;
   src: local(".SFNS-Medium"), local(".SFNSText-Medium"), local("Segoe UI Semibold"), local("Ubuntu Medium");
 }
 
 @font-face {
-  font-family: system-ui;
+  font-family: 'system-ui';
   font-style: italic;
   font-weight: 500;
   src: local(".SFNS-MediumItalic"), local(".SFNSText-MediumItalic"), local("Segoe UI Semibold Italic"), local("Ubuntu Medium Italic");
 }
 
 @font-face {
-  font-family: system-ui;
+  font-family: 'system-ui';
   font-style: normal;
   font-weight: 700;
   src: local(".SFNS-Bold"), local(".SFNSText-Bold"), local("Segoe UI Bold"), local("Ubuntu Bold");
 }
 
 @font-face {
-  font-family: system-ui;
+  font-family: 'system-ui';
   font-style: italic;
   font-weight: 700;
   src: local(".SFNS-BoldItalic"), local(".SFNSText-BoldItalic"), local("Segoe UI Bold Italic"), local("Ubuntu Bold Italic");
@@ -231,7 +231,6 @@
 }
 
 .clouds-bg .right {
-
   background: var(--clouds-bg);
   background-repeat: no-repeat;
   background-position: var(--clouds-position);
@@ -241,7 +240,7 @@
 }
 
 html {
-  font-family: system-ui, Open Sans, sans-serif;
+  font-family: Open Sans, system-ui, sans-serif;
   font-size: 1rem;
 }
 
@@ -256,6 +255,7 @@ body {
 }
 
 .closing-text {
+  text-align: center;
   color: var(--color-footer-txt);
 }
 
@@ -288,7 +288,7 @@ section {
 }
 
 #appeal-body {
-  font-size: 1.35rem;
+  font-size: 1.31rem;
   font-weight: 400;
 }
 
@@ -356,8 +356,7 @@ main {
   justify-content: space-between;
   font-size: 1.1rem;
   line-height: 1.1;
-  margin: 0 auto;
-  margin-top: -114px;
+  margin: -114px auto 0;
   text-decoration: none;
   text-shadow: var(--shadow);
   transition: transform 0.3s ease-in-out;
@@ -658,9 +657,14 @@ main {
   color: var(--color-red-50);
   display: grid;
   grid-template-columns: 1fr auto 1fr;
-  gap: 9px;
+  gap: 32px;
   align-items: start;
   margin-top: 2em;
+}
+
+.heart-svg {
+  position: relative;
+  top: -4px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -710,6 +714,9 @@ main {
   border-top: 1px solid var(--color-blue-40);
 }
 
+/*
+ * Media Queries
+ */
 
 @media (max-width: 600px) {
   main {
@@ -740,7 +747,7 @@ main {
     flex-direction: column-reverse;
     justify-items: center;
   }
-  
+
   #illustration {
     display: flex;
     flex-direction: column-reverse;
