All Downloads: Adjust padding for the Release Information section.

--- a/assets/less/pages/download.less
+++ b/assets/less/pages/download.less
@@ -1,3 +1,5 @@
+/* thunderbird/all/index.html */
+
 .js #all-downloads {
   display: none;
 }
@@ -57,6 +59,10 @@
 
     .column {
       max-width: 40%;
+
+      .release-information {
+        margin-bottom: 0;
+      }
 
       .section-text {
         width: 100%;
