--- a/assets/less/pages/system-requirements.less
+++ b/assets/less/pages/system-requirements.less
@@ -17,7 +17,12 @@
     }
   }
 
+  .section-heading {
+    text-align: center;
+  }
+
   .section-text {
     text-align: left;
+    margin-bottom: 200px;
   }
 }
