Participate: Remove photos from testimonial cards.

--- a/assets/less/new/components/testimonial.less
+++ b/assets/less/new/components/testimonial.less
@@ -83,6 +83,10 @@
     grid-template-columns: auto 1fr;
     grid-template-rows: repeat(2, 1fr);
     line-height: 1.3;
+    &.no-photo {
+      grid-template-rows: 1fr;
+      grid-template-columns: 1fr;
+    }
   }
 
   .profile-pic {
