--- a/assets/less/pages/participate.less
+++ b/assets/less/pages/participate.less
@@ -32,6 +32,7 @@
         margin: 0;
       }
     }
+
     div:nth-child(2) {
       margin-right: 5rem;
       @media (max-width: @lg) {
@@ -52,14 +53,23 @@
   .three-columns {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     gap: 2rem;
     width: 100%;
-    font-size: var(--font-base);
+    font-size: 1rem;
+    font-weight: 400;
+
+    a {
+      text-decoration-style: dotted;
+    }
+
+    li {
+      font-size: 0.9rem;
+    }
 
     @media (max-width: @sm) {
-      flex-direction: column;
       gap: 1rem;
     }
   }
