Accordion: More style adjustments

--- a/assets/less/new/components/accordion.less
+++ b/assets/less/new/components/accordion.less
@@ -53,9 +53,8 @@
 
   .answer {
     // Maaaybe revisit this...
-    p {
-      padding: 1rem;
-    }
+    padding-left: 1rem;
+    padding-right: 1rem;
     margin-top: 1rem;
     margin-bottom: 1rem;
 
@@ -64,6 +63,8 @@
       margin-bottom: 1rem;
     }
   }
+
+
 
   // Animations
   &[open] summary ~ * {
