General: Download button style tweaks

--- a/assets/less/new/components/buttons.less
+++ b/assets/less/new/components/buttons.less
@@ -215,8 +215,19 @@ button:hover::after {
 }
 
 .download-button ul li {
-  margin-block: 40px;
+  margin-block: 20px;
 }
+
+.download-dumb {
+  ul li {
+    margin-block: 40px;
+  }
+}
+
+.all-downloads-link {
+  margin-bottom: 60px;
+}
+
 
 // Make the smart download button a bit larger
 .download-button {
