--- a/assets/less/new/layout.less
+++ b/assets/less/new/layout.less
@@ -244,6 +244,11 @@ h1, h2 {
   font-weight: 600;
 }
 
+.os-list {
+  display: flex;
+  gap: 0.5rem;
+  justify-content: center;
+}
 
 .icon {
   display: inline-block;
