Navigation: button sizing and font weight adjustments

--- a/assets/less/new/components/site-nav.less
+++ b/assets/less/new/components/site-nav.less
@@ -44,6 +44,11 @@
   button::before {
     display: none;
   }
+
+  .download-link {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
 }
 
 // Homepage hack
@@ -217,7 +222,7 @@
           }
 
           h6 {
-            font-weight: 500;
+            font-weight: 600;
           }
 
           padding-right: 2rem;
@@ -270,6 +275,8 @@
     cursor: pointer;
     border: none;
     padding: 0;
+    font-weight: 600;
+    font-size: 1.125rem;
 
     &::after {
       height: 3px;
