Footer: Make lang switcher prettier.

--- a/assets/less/new/components/forms.less
+++ b/assets/less/new/components/forms.less
@@ -9,3 +9,14 @@
   background-position: calc(100% - 0.5rem);
   background-repeat: no-repeat;
 }
+
+#lang_form {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  gap: 1rem;
+
+  .form-select {
+    font-size: 0.9rem;
+  }
+}
