--- a/sites/www.thunderbird.net/includes/base/footer.html
+++ b/sites/www.thunderbird.net/includes/base/footer.html
@@ -71,12 +71,15 @@
         </small>
         {% endtrans %}
       </p>
-      <small><a href="{{ url('contribute') }}" data-link-type="footer"
-        data-link-name="Contribute to this site">{{ _('Contribute to this site') }}</a></small>
-      {% if LANG != 'en-US' %}
-      &bull; <small><a href="https://pontoon.mozilla.org/{{ LANG }}/thunderbirdnet/LC_MESSAGES/messages.po/"
-        data-link-type="footer" data-link-name="Translate this site">{{ _('Translate this site') }}</a></small>
+      <div class="legal-links">
+        <small>
+          <a href="{{ url('contribute') }}" data-link-type="footer" data-link-name="Contribute to this site">{{ _('Contribute to this site') }}</a>
+        </small>
+        {% if LANG != 'en-US' %}
+        <small>
+          <a href="https://pontoon.mozilla.org/{{ LANG }}/thunderbirdnet/LC_MESSAGES/messages.po/" data-link-type="footer" data-link-name="Translate this site">{{ _('Translate this site') }}</a></small>
         {% endif %}
+      </div>
     </div>
     <aside>
       {% include 'includes/lang_switcher.html' %}
