Spring24 Appeal: Add initial footer

--- a/media/css/appeal/spring24.css
+++ b/media/css/appeal/spring24.css
@@ -716,11 +716,91 @@ main {
   border-top: 1px solid var(--color-blue-40);
 }
 
+#footer {
+  font-size: 18px;
+  line-height: 1.5;
+  font-weight: 300;
+  background: black;
+  color: white;
+  width: 100%;
+}
+
+/* Here until the new design is merged */
+#footer.container {
+  position: relative;
+  display: grid;
+  gap: 60px;
+  padding-inline: 1rem;
+  padding-block: 200px;
+  margin-inline: auto;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
+#footer.container.footer {
+  place-items: center;
+  padding-inline: 1rem;
+  padding-block: 6rem;
+}
+
+#footer a {
+  color: currentColor;
+  text-decoration-color: currentColor;
+  text-underline-offset: 0.25em;
+  text-decoration-thickness: .12em;
+  text-decoration-style: dotted;
+  transition: font-size .2s,
+              text-decoration-color .2s;
+}
+
+#footer a.donate,
+#footer a:hover,
+#footer a:hover:visited {
+  text-decoration-color: var(--accent);
+}
+
+#footer a:visited {
+  text-decoration-color: var(--color-purple-50);
+}
+
+#footer .mzla {
+  display: grid;
+  place-items: center;
+  gap: 15px;
+  text-align: center;
+  max-inline-size: 75ch;
+}
+
+#footer .mozilla-logo {
+  --accent: white;
+  max-width: 200px;
+}
+
+#footer .site-links,
+#footer .legal-links {
+  display: flex;
+  gap: 30px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+#footer .legal-links {
+  font-size: 1rem;
+}
+
 /*
  * Media Queries
  */
 
+@media (max-width: 512px) {
+  #footer.container {
+    padding-inline: 0.25rem;
+    padding-block: 32px;
+  }
+}
+
 @media (max-width: 600px) {
+
   main {
     padding: 0;
   }
